--- a/BankClient/BankClient/Kontofunktionen/Bankstatement.xaml
+++ b/BankClient/BankClient/Kontofunktionen/Bankstatement.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="Bankstatement" Height="400" Width="400" WindowStartupLocation = "CenterScreen">
+        Title="Bank" Height="700" Width="1200" WindowStartupLocation = "CenterScreen">
     <Grid>
-        <Button x:Name="Log_out" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="Back" Content="Zurück" Click="Zurück" HorizontalAlignment="Left" Margin="309,340,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button" Content="Kontoauszug ausgeben" Click="auszug" HorizontalAlignment="Left" Margin="47,125,0,0" VerticalAlignment="Top" Width="306" Height="83"/>
+        <Button x:Name="Log_out" Content="Logout" Click="Logout" Margin="887,40,56.6,0" VerticalAlignment="Top" Height="88" FontSize="30"/>
+        <Button x:Name="Back" Content="Zurück" Click="Zurück" Margin="637,544,61.6,0" VerticalAlignment="Top" Width="500" Height="88" FontSize="30"/>
+        <Button x:Name="button" Content="Kontoauszug ausgeben" Click="auszug" Margin="57,232,56.6,0" VerticalAlignment="Top" Height="199" FontSize="30"/>
 
     </Grid>
 </Window>
