--- a/BankClient/BankClient/Kontofunktionen/Selftransaction.xaml
+++ b/BankClient/BankClient/Kontofunktionen/Selftransaction.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="Selftransaction" Height="400" Width="400" WindowStartupLocation = "CenterScreen">
+        Title="Bank" Height="700" Width="1200" WindowStartupLocation = "CenterScreen">
     <Grid>
-        <Button x:Name="Log_out" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,-92,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="Back" Content="Zurück" Click="Zurück" HorizontalAlignment="Left" Margin="309,340,-92,-91" VerticalAlignment="Top" Width="75"/>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="115" Margin="23,121,0,0" VerticalAlignment="Top" Width="264"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="23,100,0,0" TextWrapping="Wrap" Text="Auf welches Kreditkonto soll der Betrag übertragen werden?" VerticalAlignment="Top" Width="326"/>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="23,37,0,0" TextWrapping="Wrap" Text="Welcher Betrag soll übertragen werden?" VerticalAlignment="Top" Width="326"/>
-        <TextBox x:Name="Betrag" HorizontalAlignment="Left" Height="23" Margin="23,58,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="85"/>
-        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="113,58,0,0" TextWrapping="Wrap" Text="in €" VerticalAlignment="Top" Height="22"/>
+        <Button x:Name="Log_out" Content="Logout" Click="Logout" Margin="887,40,56.6,0" VerticalAlignment="Top" Height="88" FontSize="30"/>
+        <Button x:Name="Back" Content="Zurück" Click="Zurück" Margin="637,544,61.6,0" VerticalAlignment="Top" Width="500" Height="88" FontSize="30"/>
+        <ListBox x:Name="listBox" Height="306" Margin="66,171,56.6,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="66,134,0,0" TextWrapping="Wrap" Height="32" VerticalAlignment="Top" FontSize="24" Text="Auf welches Kreditkonto soll der Betrag übertragen werden?" />
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="66,40,0,0" TextWrapping="Wrap" Height="32" VerticalAlignment="Top" FontSize="24" Text="Welcher Betrag soll übertragen werden?" />
+        <TextBox x:Name="Betrag" HorizontalAlignment="Left" Height="42" Margin="66,77,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="276" FontSize="24"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="347,77,0,0" TextWrapping="Wrap" Text="€" VerticalAlignment="Top" Height="42" Width="43" FontSize="24"/>
 
     </Grid>
 </Window>
