--- a/BankClient/BankClient/Register.xaml
+++ b/BankClient/BankClient/Register.xaml
@@ -5,23 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="Register" Height="400" Width="400" WindowStartupLocation = "CenterScreen">
+        Title="Bank" Height="700" Width="1200" WindowStartupLocation = "CenterScreen">
     <Grid>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="9,0,0,339" TextWrapping="Wrap" Text="Geben Sie bitte Ihren Vornamen ein: " VerticalAlignment="Bottom"/>
-        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="10,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihren "/><Run Text="Nach"/><Run Text="namen ein: "/></TextBlock>
-        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="10,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="284"><Run Text="Geben Sie bitte Ihr Geburtsdatum ein (DDMMYYYY):"/></TextBlock>
-        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="9,159,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihre Adresse und Hausnummer ein:"/></TextBlock>
-        <TextBlock x:Name="textBlock_Copy3" HorizontalAlignment="Left" Margin="10,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihre Postleizahl und Ihren Wohnort ein: "/></TextBlock>
-        <TextBlock x:Name="textBlock_Copy4" HorizontalAlignment="Left" Margin="10,257,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte "/><Run Text="Ihre Telefonnumer "/><Run Text="ein: "/></TextBlock>
-        <Button x:Name="register" Content="Registrieren!" Click="registrieren" HorizontalAlignment="Left" Margin="40,325,0,0" VerticalAlignment="Top" Width="123" Height="37"/>
-        <Button x:Name="back" Content="Zurück" Click="zurück" Margin="230,325,40.6,0" VerticalAlignment="Top" Height="37"/>
-        <TextBox x:Name="Vorname" HorizontalAlignment="Left" Height="23" Margin="9,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="188"/>
-        <TextBox x:Name="Nachname" HorizontalAlignment="Left" Height="23" Margin="10,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
-        <TextBox x:Name="Geburtsdatum" HorizontalAlignment="Left" Height="23" Margin="10,131,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
-        <TextBox x:Name="Adresse" HorizontalAlignment="Left" Height="23" Margin="10,180,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
-        <TextBox x:Name="Wohnort" HorizontalAlignment="Left" Height="23" Margin="101,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="153"/>
-        <TextBox x:Name="Telefonnummer" HorizontalAlignment="Left" Height="23" Margin="10,278,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
-        <TextBox x:Name="Hausnummer" HorizontalAlignment="Left" Height="23" Margin="212,180,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="42"/>
-        <TextBox x:Name="Postleitzahl" HorizontalAlignment="Left" Height="23" Margin="10,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="71"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="47,15,0,0" TextWrapping="Wrap" Text="Geben Sie bitte Ihren Vornamen ein: " FontSize="24" Height="32" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="47,99,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Text="Geben Sie bitte Ihren "/><Run Text="Nach"/><Run Text="namen ein: "/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="46,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="566" FontSize="24"><Run Text="Geben Sie bitte Ihr Geburtsdatum ein (DDMMYYYY):"/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="47,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Text="Geben Sie bitte Ihre Adresse und Hausnummer ein:"/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy3" HorizontalAlignment="Left" Margin="47,352,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Text="Geben Sie bitte Ihre Postleizahl und Ihren Wohnort ein: "/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy4" HorizontalAlignment="Left" Margin="47,436,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Text="Geben Sie bitte "/><Run Text="Ihre Telefonnumer "/><Run Text="ein: "/></TextBlock>
+        <Button x:Name="register" Content="Registrieren!" Click="registrieren" Margin="47,544,646.6,0" VerticalAlignment="Top" Width="500" Height="88" FontSize="30"/>
+        <Button x:Name="back" Content="Zurück" Click="zurück" Margin="637,544,61.6,0" VerticalAlignment="Top" Width="500" Height="88" FontSize="30"/>
+        <TextBox x:Name="Vorname" HorizontalAlignment="Left" Height="42" Margin="47,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="407" FontSize="24"/>
+        <TextBox x:Name="Nachname" HorizontalAlignment="Left" Height="42" Margin="47,137,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="407" FontSize="24"/>
+        <TextBox x:Name="Geburtsdatum" HorizontalAlignment="Left" Height="42" Margin="47,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="407" FontSize="24"/>
+        <TextBox x:Name="Adresse" HorizontalAlignment="Left" Height="42" Margin="46,305,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="321" FontSize="24"/>
+        <TextBox x:Name="Wohnort" HorizontalAlignment="Left" Height="42" Margin="200,389,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="254" FontSize="24"/>
+        <TextBox x:Name="Telefonnummer" HorizontalAlignment="Left" Height="42" Margin="47,473,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="407" FontSize="24"/>
+        <TextBox x:Name="Hausnummer" HorizontalAlignment="Left" Height="42" Margin="394,305,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="60" FontSize="24"/>
+        <TextBox x:Name="Postleitzahl" HorizontalAlignment="Left" Height="42" Margin="47,389,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="131" FontSize="24"/>
     </Grid>
 </Window>
